Modulo4 actualizacion tarea

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -90,6 +90,23 @@
     </string>
     <string name="yara_khali">Yara Khali</string>
     <string name="yara_khalil_gmail_com">yara_khalil@gmail.com</string>
+    <string name="mi_perfil">Mi perfil</string>
+    <string name="amanda_alkemy">Amanda Alkemy</string>
+    <string name="mi_informaci_n">Mi Información</string>
+    <string name="mis_tarjetas">Mis tarjetas</string>
+    <string name="opciones">Opciones</string>
+    <string name="centro_de_ayuda">Centro de ayuda</string>
+    <string name="sara_ibrahim">Sara Ibrahim</string>
+    <string name="oct_12_02_13_pm">Oct 12, 02:13 PM</string>
+    <string name="_20_50">+$20.50</string>
+    <string name="ahmad_ibrahim">Ahmad Ibrahim</string>
+    <string name="oct_11_01_19_am">Oct 11, 01:19 AM</string>
+    <string name="_12_40">+$12.40</string>
+    <string name="oct_07_09_10_pm">Oct 07, 09:10 PM</string>
+    <string name="_21_30">-$21.30</string>
+    <string name="hiba_saleh">Hiba Saleh</string>
+    <string name="oct_04_05_45_am">Oct 04, 05:45 AM</string>
+    <string name="_09_00">+$09.00</string>
 
 
 </resources>
